[package]
name = "ladder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.15", features = ["blocking"] }
serde = { version = "1.0.158", features = ["derive"] }
serde_json = "1.0.94"
tiny_http = "0.12.0"
urlencoding = "2.1.2"
